noinst_LTLIBRARIES = libobservables.la

#QMCPACK_ROOT = /home/gergely/qmcPlusPlusNew
#QMCPACK_ROOT = /home/gergely/qmcPlusPlusCEIMC
#QMCPACK_HOME = $(QMCPACK_ROOT)/build

libobservables_la_CXXFLAGS = $(COMMON_CFLAGS) $(QMC_DEF)
libobservables_la_SOURCES  =     \
    Angular.h                    \
    Angular.cc                   \
    AngularMomCor.h              \
    AngularMomCor.cc             \
    AutoCorr.cc                  \
    AutoCorr.h                   \
    Conductivity.h               \
    Conductivity.cc              \
    Coupling.cc                  \
    Coupling.h                   \
    DistanceToHead.cc            \
    DistanceToHead.h             \
    Forces.cc                    \
    Forces.h                     \
    lsapr.f                      \
    JosephsonPathDump.h          \
    JosephsonPathDump.cc         \
    lsapr.f                      \
    ObservableBase.cc            \
    ObservableBase.h             \
    ObservableClass.h            \
    ObservableVar.h              \
    ObservableVar.cc             \
    ObservableCorrelation.cc     \
    ObservableCorrelation.h      \
    ObservableEnergy.cc          \
    ObservableEnergy.h           \
    OpenOrientation.h            \
    OpenOrientation.cc           \
    ParticleAverageLoc.h         \
    ParticleAverageLoc.cc        \
    PathDump.cc                  \
    PathDump.h                   \
    PermutationCount.h           \
    PermutationCount.cc          \
    Pressure.h                   \
    Pressure.cc                  \
    Phik.h                       \
    Phik.cc                      \
    PlaneDensity.h               \
    PlaneDensity.cc              \
    SpecificHeat.h               \
    SpecificHeat.cc              \
    SpecificHeatA.h               \
    SpecificHeatA.cc              \
    SuperfluidFraction.h         \
    SuperfluidFraction.cc        \
    SuperfluidFractionPerLayer.cc \
    SuperfluidFractionPerLayer.h \
    SuperfluiDrop.h              \
    SuperfluiDrop.cc             \
    StructureFactor.cc           \
    StructureFactor.h            \
    Time.cc                      \
    Time.h                       \
    VacancyLocation.h            \
    VacancyLocation.cc           \
    VariationalPIEnergy.h        \
    VariationalPIEnergy.cc       \
    Weight.cc                    \
    Weight.h                     \
    WindingNumber.cc             \
    WindingNumber.h
