bin_PROGRAMS = pathvis

LDADD = $(GTKMM_LIBS) $(GTKGLEXTMM_LIBS) $(COMMON_LIBS)
AM_CXXFLAGS = $(GTKMM_CFLAGS) $(GTKGLEXTMM_CFLAGS) $(COMMON_CFLAGS)

pathvis_SOURCES =    \
    BoxClass.cc      \
    BoxClass.h       \
    BoxObject.cc     \
    BoxObject.h      \
    Export.cc        \
    Export.h         \
    GLObject.cc      \
    GLObject.h       \
    OnePath.h        \
    PathObject.cc    \
    PathObject.h     \
    PathVis.cc       \
    PathVis.h        \
    SmoothClass.cc   \
    SmoothClass.h    \
    SphereObject.cc  \
    SphereObject.h   \
    ViewClass.cc     \
    Visual.cc        \
    Visual.h         \
    trackball.h      \
    trackball.c    
