noinst_LTLIBRARIES = liblangevin.la

#QMCPACK_ROOT = /home/gergely/qmcPlusPlusNew
#QMCPACK_ROOT = /home/gergely/qmcPlusPlusCEIMC
#QMCPACK_HOME = $(QMCPACK_ROOT)/build

liblangevin_la_CXXFLAGS = $(COMMON_CFLAGS) $(QMC_DEF) $(LIBXML_LIB)
liblangevin_la_SOURCES  =            \
   Forces.cc                         \
   Forces.h
